# pi_world

./: .gitignore  Cargo.toml  README.md
benches/: param_query_entryquery_init.rs  param_query_init.rs  param_res_init.rs
ecs_bench/: Cargo.toml
ecs_bench/benches/: benchmarks.rs
ecs_bench/src/: lib.rs
ecs_bench/src/bevy11/: add_remove.rs  batch_insert.rs  frag_iter.rs  get.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/bevy15/: add_remove.rs  batch_insert.rs  frag_iter.rs  get.rs  heavy_compute.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/bevy4/: add_remove.rs  batch_insert.rs  frag_iter.rs  gui_simulation.rs  heavy_compute.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/bevy5/: add_remove.rs  batch_insert.rs  frag_iter.rs  heavy_compute.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/event_deal/: mod.rs
ecs_bench/src/legion/: mod.rs  simple_insert.rs
ecs_bench/src/legion4/: frag_iter.rs  mod.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/pi_bevy/: cmd_play.rs  mod.rs  setting.rs
ecs_bench/src/pi_ecs/: integration.rs  mod.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/pi_ecs_old/: mod.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/pi_ui/: mod.rs  setting.rs
ecs_bench/src/pi_world/: add_remove.rs  batch_insert.rs  frag_iter.rs  get.rs  heavy_compute.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
ecs_bench/src/shipyard/: mod.rs
ecs_bench/src/shipyard_packed/: mod.rs
ecs_bench/src/specs/: get.rs  mod.rs  simple_insert.rs
ecs_bench/src/utils/: mod.rs
examples/: test00.rs
macros/: Cargo.toml
macros/src/: label.rs  lib.rs  manifest.rs
src/: alter.rs  app.rs  archetype.rs  async_function_system.rs  async_graph.rs  bench1.rs  blob.rs  blob_vec.rs  column.rs  component.rs  components.rs  debug.rs  dirty.rs  dot.rs  editor.rs  entry_query.rs  event.rs  example.rs  exec.rs  exec_graph.rs  fetch.rs  filter.rs  function_system.rs  insert.rs  insert_batch.rs  lib.rs  listener.rs  multi_res.rs  mutate.rs  param_set.rs  param_unready.rs  parm_set.rs  plugin.rs  plugin_group.rs  query.rs  raw.rs  record.rs  res.rs  safe_vec.rs  schedule.rs  (+10 more)
src/commands/: command_queue.rs  mod.rs
tests/: defined.rs  param_alter.rs  param_component_index.rs  param_editer.rs  param_event.rs  param_local.rs  param_param_set.rs  param_query.rs  param_query_added.rs  param_query_changed.rs  param_query_entry.rs  param_query_insert.rs  param_query_removed.rs  param_query_ticker.rs  param_single_res.rs  param_world.rs  schedule.rs
