[package]
name = "pi_world"
version = "0.2.14"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "ecs world"
repository = "https://github.com/GaiaWorld/pi_world.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "world", "ecs"]
readme = "README.md"
categories = ["data-structures", "memory-management"]

[workspace]
members = ["ecs_bench", "macros"]

[features]
default = ["single_thread"]
single_thread = []
trace = []
rc = ["pi_share/rc", "pi_arr/rc"]

[dependencies]
derive-deref-rs = "0.1"
backtrace = "0.3"
pi_map = "0.2"
bitflags="2.9"
smallvec="1.13"
fixedbitset="0.5"
pi_null = "0.1"
pi_hash = "0.1"
pi_share = {version="0.5"}
pi_key_alloter = "0.6"
pi_slot = "0.4"
pi_append_vec = "0.6"
pi_arr = {version="0.20"}
dashmap ="6.0"
pi-async-rt = "0.2"
async-channel = "2.2"
pi_proc_macros = "0.1"
bevy_ptr = "0.13"
bevy_utils = "0.13"
pi_world_macros = {version = "0.1", path = "./macros"}
log = "0.4"
downcast-rs = "1.2"
bitvec = { version = "1.0", features = ["serde"] }
pi_print_any = "0.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
pi_time = "0.5"
serde = { version = "=1.0.203", features = ["serde_derive"] }



[dev-dependencies]
cgmath="0.18"
rand = "0.8"
# pi_world_2 = {version = "=0.2.5", package="pi_world"}

[patch.crates-io]
# pi_share = {path = "../pi_share"}
pi_append_vec = {path = "../pi_append_vec"}
pi_arr = {path = "../pi_arr"}
# pi_key_alloter = {path = "../pi_key_alloter"}
